# mysql-hub-mcp

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.org  requirements.txt  test_endpoint.py  uv.lock.org
.cursor/rules/: db-hub-mcp-rule.mdc  mysql-hub-mcp-rule.mdc
adk_agents/: __init__.py  pyproject.toml  pyproject.toml.org
adk_agents/mysql_hub_agent/: __init__.py  agent.py  env.example  mcp_server_config.json  utilities.py
adk_client/: README.md  __init__.py  agent.py  client.py  cmd.py  main.py  pyproject.toml  pyproject.toml.org  uv.lock.org
adk_mcp_client/: agent.py  ai_providers.py  cmd.py  mcp_server_config.json
agent/: README.md  __init__.py  __main__.py  agent.py  cmd.py  evalset876848.evalset.json  mcp_server_config.json  pyproject.toml  root_agent.yaml
app_bridge/: mcp_bridge.py
app_client/: README.md  __init__.py  client_web.py  mcp.json  run_client.py
app_mcp_server/: README.md  __init__.py  ai_provider.py  ai_worker.py  common.py  config.py  database.py  env.example  http_server.py  mcp_server.py  prompt.py  rag_integration.py  test.py
bridge/: __init__.py  pyproject.toml
client/: client_app.py  client_web.py  pyproject.toml  run_web_client.py
docs/: cusor_chat_llm-tool적용.md  llm-tool사용변경요구사항.md  requirement.md
docs/sql/: STND_TERM_init_data.sql  mysql_devdb_STND_WORD_2025-08-24_142037.sql  mysql_devdb_orders_2025-08-24_134556.sql  mysql_devdb_users_2025-08-24_142044.sql  postgresql_devdb_orders_2025-08-24.sql  postgresql_devdb_users_2025-08-24.sql
docs/sql/init_data/: mysql_devdb_STND_TERM_2025-08-24_142024.sql  postgresql_devdb_STND_TERM_2025-08-24.sql  postgresql_devdb_STND_WORD_2025-05-24.sql
docs/sql/table_schemas/: devdb.ORDERS.sql  devdb.STND_TERM.sql  devdb.STND_WORD.sql  devdb.USERS.sql
mcp_agents_adk/: README.md  main.py
mcp_agents_adk/db_hub_agent/: agent.py  ai_config.py  ai_providers.py
mcp_bridge/: README.md
mcp_client_adk/: README.md  agent.py  ai_config.py  ai_providers.py  client.py  cmd.py  env.example  mcp_server_config.json  prompt.py  utilities.py
rag_chain/: build_schema_db.py  instll_package.txt  retrieve_test.py
run_cmd/: 1-1.run_http_server.bat  1-2.run_http_client_cmd.bat  1-3.run_http_client_web.bat  2-1.run_mcp_server.bat  2-2.run_mcp_agent_cmd.bat  2-3.run_mcp_agent_web.bat
server/: MCP_SSE_ENDPOINTS.md  README_GOOGLE.md  ai_provider.py  ai_worker.py  common.py  config.ipynb  config.py  database.py  env.example  http_server.py  http_server_org.py  import_test.py  mcp_server.py  mcp_server_org.py  pyproject.toml  pyproject.toml.org  run_server.py  server_app.py  test.py  test_config.py  test_google_provider.py  test_mcp_client.py
